[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jesd3c-parser"
version = "2024.1001"
description = "JESD3-C Parser for Python"
readme = "README.md"
authors = [{ name = "The Really Old-School Company Limited", email = "info@rosco-m68k.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["cpld", "atf1502", "atf1504", "atf1508", "logic", "programmer"]
dependencies = [
    "antlr4-python3-runtime==4.13.1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "pre-commit", "isort", "pip-tools", "pytest", "sure", "httpretty"]

[project.urls]
Homepage = "https://github.com/roscopeco/jesd3c-parser"

[tool.bumpver]
current_version = "2024.1000"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]

[tool.black]
include = '\.pyi?$'
exclude = '''
    /(
        \.git
      | \.venv
      | _build
      | build
      | dist
    )/
    '''

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
